--- a/pom.xml
+++ b/pom.xml
@@ -1,30 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.5.6</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.devsoga</groupId>
 	<artifactId>BookStore_V2</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>BookStore_V2</name>
 	<description>Demo project for Spring Boot</description>
-	<url/>
+	<url />
 	<licenses>
-		<license/>
+		<license />
 	</licenses>
 	<developers>
-		<developer/>
+		<developer />
 	</developers>
 	<scm>
-		<connection/>
-		<developerConnection/>
-		<tag/>
-		<url/>
+		<connection />
+		<developerConnection />
+		<tag />
+		<url />
 	</scm>
 	<properties>
 		<java.version>25</java.version>
@@ -50,21 +51,22 @@
 			<scope>test</scope>
 		</dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.flywaydb/flyway-core -->
-        <dependency>
-            <groupId>org.flywaydb</groupId>
-            <artifactId>flyway-core</artifactId>
-            <version>11.14.1</version>
-        </dependency>
+		<!-- https://mvnrepository.com/artifact/org.flywaydb/flyway-core -->
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-core</artifactId>
+			<version>11.14.1</version>
+		</dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.flywaydb/flyway-mysql -->
-        <dependency>
-            <groupId>org.flywaydb</groupId>
-            <artifactId>flyway-mysql</artifactId>
-            <version>11.14.1</version>
-        </dependency>
+		<!-- https://mvnrepository.com/artifact/org.flywaydb/flyway-mysql -->
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-mysql</artifactId>
+			<version>11.14.1</version>
+		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security -->
+		<!--
+		https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security -->
 		<!-- <dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
@@ -95,6 +97,12 @@
 			<artifactId>spring-boot-starter-data-redis</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.6.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -109,10 +117,13 @@
 				<artifactId>flyway-maven-plugin</artifactId>
 				<version>11.7.2</version>
 				<configuration>
-					<!-- Read from environment variable SPRING_FLYWAY_URL or fallback to application property -->
-					<url>${env.SPRING_FLYWAY_URL:${spring.flyway.url:jdbc:mysql://localhost:3306/BookStoreDB?useSSL=false&amp;serverTimezone=UTC&amp;allowPublicKeyRetrieval=true}}</url>
+					<!-- Read from environment variable SPRING_FLYWAY_URL or
+					fallback to application property -->
+					<url>
+						${env.SPRING_FLYWAY_URL:${spring.flyway.url:jdbc:mysql://localhost:3306/BookStoreDB?useSSL=false&amp;serverTimezone=UTC&amp;allowPublicKeyRetrieval=true}}</url>
 					<user>${env.SPRING_FLYWAY_USER:${spring.flyway.user:root}}</user>
-					<password>${env.SPRING_FLYWAY_PASSWORD:${spring.flyway.password:}}</password>
+					<password>
+						${env.SPRING_FLYWAY_PASSWORD:${spring.flyway.password:}}</password>
 					<cleanDisabled>false</cleanDisabled>
 					<locations>
 						<location>classpath:db/migration</location>
@@ -121,7 +132,7 @@
 			</plugin>
 
 
-        </plugins>
+		</plugins>
 
 	</build>
 
